chromeos: Fix turning on ChromeVox after shortcut viewer app is open

If ChromeVox has ever been turned on during a user session then
AutomationManagerAura and AXHostService will be enabled, even if
ChromeVox is turned off later. When the shortcut viewer app launches
it sees automation is enabled and AXRemoteHost caches the enabled state.

When ChromeVox is turned on again AXHostService will generate another
OnAutomationEnabled() message to the remote app. Instead of just
early-exiting because "automation is already on", re-serialize the
app's node tree and send load complete.

This is consistent with how AutomationManagerAura behaves today.

Bug: 876407
Test: added to views_mus_unittests
Change-Id: Ib906da907ca20bbaa3509af72b137462ba006e28
Reviewed-on: https://chromium-review.googlesource.com/1185897
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585533}
Former-commit-id: f843782205ad1bb097af41faa352e2ffa23fe216